--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -1,6 +1,6 @@
 name: Test Sources
 
-on: 
+on:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
 
@@ -31,18 +31,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
-      if: (matrix.os == 'ubuntu-18.04' && matrix.python == '3.8') || github.event.pull_request.draft == false
+      if: matrix.os == 'ubuntu-20.04' || github.event.pull_request.draft == false
     - name: Set up Python ${{ matrix.python }}
-      if: (matrix.os == 'ubuntu-18.04' && matrix.python == '3.8') || github.event.pull_request.draft == false
+      if: matrix.os == 'ubuntu-20.04' || github.event.pull_request.draft == false
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python }}
     - name: Tests
-      if: (matrix.os == 'ubuntu-18.04' && matrix.python == '3.8') || github.event.pull_request.draft == false
+      if: matrix.os == 'ubuntu-20.04' || github.event.pull_request.draft == false
       run: |
         ${{ matrix.DEPENDENCIES_INSTALLATION }}
-        cp dependencies/.clang-format-9 .clang-format
         pip install -r tests/sources/requirements.txt
         export OPENDR_HOME=$PWD
         python -m unittest discover -s tests/sources
-
