--- a/tests/sources/requirements.txt
+++ b/tests/sources/requirements.txt
@@ -1,2 +1,13 @@
 pep8
 pyflakes
+numpy==1.17.5
+matplotlib
+cython
+torch==1.7.1
+torchvision==0.8.2
+tensorboardX==2.0
+opecv-python==4.5.1.48
+git+https://github.com/philferriere/cocoapi.git#subdirectory=PythonAPI
+tqdm==4.54.0
+onnx==1.8.0
+onnxruntime==1.3.0
