--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -40,6 +40,8 @@ jobs:
       if: matrix.os == 'ubuntu-20.04' || github.event.pull_request.draft == false
       run: |
         ${{ matrix.DEPENDENCIES_INSTALLATION }}
+        pip install numpy=1.17.5
+        pip install cython
         pip install -r tests/sources/requirements.txt
         export OPENDR_HOME=$PWD
         export PYTHONPATH=$PWD/src
