--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -40,6 +40,8 @@ jobs:
       if: matrix.os == 'ubuntu-20.04' || github.event.pull_request.draft == false
       run: |
         ${{ matrix.DEPENDENCIES_INSTALLATION }}
-        pip install -r tests/sources/requirements.txt
         export OPENDR_HOME=$PWD
+        export PYTHONPATH=$OPENDR_HOME/src:$PYTHONPATH
+        make
+        pip install -r tests/sources/requirements.txt
         python -m unittest discover -s tests/sources
