--- a/src/perception/pose_estimation/dependencies.ini
+++ b/src/perception/pose_estimation/dependencies.ini
@@ -5,6 +5,7 @@ python=torch==1.7.1
        torchvision==0.8.2
        tensorboardX==2.0
        opencv-python==4.5.1.48
+       matplotlib==2.2.2
        git+https://github.com/philferriere/cocoapi.git#subdirectory=PythonAPI
        tqdm==4.54.0
        onnx==1.8.0
