--- a/src/perception/object_detection_3d/voxel_object_detection_3d/dependencies.ini
+++ b/src/perception/object_detection_3d/voxel_object_detection_3d/dependencies.ini
@@ -9,6 +9,6 @@ python=torch==1.7.1
        tqdm==4.54.0
        onnx==1.8.0
        onnxruntime==1.3.0
-
        protobuf==3.11.3
        pybind11==2.6.2
+       numba==0.48.0
