--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -36,12 +36,20 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Tests
+    - name: Test Sources
       if: matrix.os == 'ubuntu-20.04' || github.event.pull_request.draft == false
       run: |
         ${{ matrix.DEPENDENCIES_INSTALLATION }}
         export OPENDR_HOME=$PWD
+        pip install -r tests/requirements.txt
+        python -m unittest discover -s tests
+    - name: Test API
+      if: matrix.os == 'ubuntu-20.04'
+      run: |
+        ${{ matrix.DEPENDENCIES_INSTALLATION }}
+        export OPENDR_HOME=$PWD
         export PYTHONPATH=$OPENDR_HOME/src:$PYTHONPATH
-        make
+        make install_compilation_dependencies
+        make install_runtime_dependencies
         pip install -r tests/sources/requirements.txt
         python -m unittest discover -s tests/sources
