--- a/src/perception/object_detection_3d/voxel_object_detection_3d/dependencies.ini
+++ b/src/perception/object_detection_3d/voxel_object_detection_3d/dependencies.ini
@@ -12,5 +12,5 @@ python=torch==1.7.1
        protobuf==3.11.3
        pybind11==2.6.2
        numba==0.48.0
-       torchplus=0.2.44
+       torchplus==0.2.44
 linux=libboost-dev
