--- a/src/perception/object_detection_3d/voxel_object_detection_3d/dependencies.ini
+++ b/src/perception/object_detection_3d/voxel_object_detection_3d/dependencies.ini
@@ -11,6 +11,6 @@ python=torch==1.7.1
        onnxruntime==1.3.0
        protobuf==3.11.3
        pybind11==2.6.2
+       llvmlite==0.31.0
        numba==0.48.0
-       torchplus==0.2.44
 linux=libboost-dev
