Add scikit-image and easydict dependencies

--- a/src/perception/object_detection_3d/voxel_object_detection_3d/dependencies.ini
+++ b/src/perception/object_detection_3d/voxel_object_detection_3d/dependencies.ini
@@ -14,4 +14,6 @@ python=torch==1.7.1
        llvmlite==0.31.0
        numba==0.48.0
        pyyaml==5.3
+       scikit-image==0.16.2
+       easydict==1.9
 linux=libboost-dev
