--- a/src/perception/speech_recognition/edgespeechnets/dependencies.ini
+++ b/src/perception/speech_recognition/edgespeechnets/dependencies.ini
@@ -3,4 +3,5 @@
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format 
 python=torch==1.7.1
        librosa==0.8.0
+linux=libsndfile1
 
