--- a/src/perception/object_tracking_2d/fair_mot/dependencies.ini
+++ b/src/perception/object_tracking_2d/fair_mot/dependencies.ini
@@ -12,4 +12,7 @@ python=torch==1.7.1
        git+https://github.com/MatthewHowe/DCNv2
        yacs==0.1.8
        progress==1.5
-
+       lap==0.4.0
+       cython==0.29.22
+       cython-bbox==0.1.3
+       motmetrics==1.2.0
