--- a/src/perception/face_recognition/dependencies.ini
+++ b/src/perception/face_recognition/dependencies.ini
@@ -3,6 +3,7 @@
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format 
 python=torch==1.7.1
        torchvision==0.8.2
+       tensorboard==2.3.0
        PIL==7.0.0
        opencv-python==4.5.1.48
        matplotlib==3.3.2
