rename gazebo_world to robots_world, combined_env to mobile_manipulation_env

--- a/src/control/mobile_manipulation/CMakeLists.txt
+++ b/src/control/mobile_manipulation/CMakeLists.txt
@@ -24,7 +24,7 @@ find_package(catkin REQUIRED COMPONENTS
   rosbag
   cmake_modules
   pybind11_catkin
-  tmc_robot_kinematics_model
+#  tmc_robot_kinematics_model
 )
 find_package(OpenCV REQUIRED )
 find_package(Eigen REQUIRED)
