--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -10,6 +10,7 @@ defaults:
 
 jobs:
   cleanup-runs:
+    if: ${{ contains(github.event.pull_request.labels.*.name, 'test') }}
     runs-on: ubuntu-latest
     steps:
     - uses: rokroskar/workflow-run-cleanup-action@master
@@ -17,6 +18,7 @@ jobs:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
   test-sources:
     needs: cleanup-runs
+    if: ${{ contains(github.event.pull_request.labels.*.name, 'test') }}
     strategy:
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04, macos-10.15]
