--- a/src/control/mobile_manipulation/CMakeLists.txt
+++ b/src/control/mobile_manipulation/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.12)
-project(modulation_rl)
+project(mobile_manipulation_rl)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
