--- a/src/control/mobile_manipulation/dependencies.ini
+++ b/src/control/mobile_manipulation/dependencies.ini
@@ -2,18 +2,16 @@
 # 'python' key expects a value using the Python requirements file format
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format
 python=torch==1.7.1
-       torchvision==0.8.2
        numpy
        pyyaml
        matplotlib
        empy
        pyparsing
-       pillow=7.2.0
+       pillow==7.2.0
        seaborn
        scipy
-       stable-baselines3==0.10.0
-       tensorboard
+       stable-baselines3>=0.10.0
        roslibpy
        rospkg
-       gym==0.17.2
+       gym>=0.18.0
        cloudpickle==1.5.0
