--- a/src/control/mobile_manipulation/dependencies.ini
+++ b/src/control/mobile_manipulation/dependencies.ini
@@ -2,6 +2,7 @@
 # 'python' key expects a value using the Python requirements file format
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format
 python=torch==1.7.1
+       tensorboard
        numpy
        pyyaml
        matplotlib
