--- a/src/control/mobile_manipulation/CMakeLists.txt
+++ b/src/control/mobile_manipulation/CMakeLists.txt
@@ -147,12 +147,6 @@ include_directories(
 
 ## Declare a C++ library
 
-add_library(ellipse src/ellipse.cpp)
-target_link_libraries(ellipse ${catkin_LIBRARIES})
-
-add_library(modulation_ellipses src/modulation_ellipses.cpp)
-target_link_libraries(modulation_ellipses ellipse ${LIBGP_LIBRARIES} ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
-
 add_library(myutils src/utils.cpp)
 target_link_libraries(myutils yaml-cpp ${catkin_LIBRARIES})
 
@@ -172,24 +166,24 @@ add_library(worlds src/worlds.cpp)
 target_link_libraries(worlds myutils ${catkin_LIBRARIES})
 
 add_library(robot_env src/robot_env.cpp)
-target_link_libraries(robot_env worlds modulation_ellipses myutils ${LIBGP_LIBRARIES} ${catkin_LIBRARIES})
+target_link_libraries(robot_env worlds myutils ${LIBGP_LIBRARIES} ${catkin_LIBRARIES})
 
 add_library(robot_pr2 src/robot_pr2.cpp)
-target_link_libraries(robot_pr2 worlds modulation_ellipses myutils ${catkin_LIBRARIES})
+target_link_libraries(robot_pr2 worlds myutils ${catkin_LIBRARIES})
 
 add_library(robot_tiago src/robot_tiago.cpp)
-target_link_libraries(robot_tiago worlds modulation_ellipses myutils ${catkin_LIBRARIES})
+target_link_libraries(robot_tiago worlds myutils ${catkin_LIBRARIES})
 
 #add_library(robot_hsr src/robot_hsr.cpp)
-#target_link_libraries(robot_hsr worlds modulation_ellipses myutils ${catkin_LIBRARIES})
+#target_link_libraries(robot_hsr worlds myutils ${catkin_LIBRARIES})
 
 # pybind
 pybind_add_module(pybindings SHARED src/worlds src/robot_env src/pybindings src/robot_pr2
         src/robot_tiago src/utils src/gripper_planner/base_gripper_planner src/gripper_planner/linear_planner src/gripper_planner/gmm_planner
-        src/gripper_planner/gaussian_mixture_model src/modulation_ellipses)
+        src/gripper_planner/gaussian_mixture_model)
 #src/alglib/alglibinternal src/alglib/alglibmisc src/alglib/ap src/alglib/dataanalysis src/alglib/diffequations src/alglib/fasttransforms src/alglib/integration src/alglib/interpolation src/alglib/linalg src/alglib/optimization src/alglib/solvers src/alglib/specialfunctions src/alglib/statistics)
 target_link_libraries(pybindings PRIVATE worlds robot_env robot_pr2 robot_tiago myutils
-        base_gripper_planner linear_planner gmm_planner gaussian_mixture_model modulation_ellipses
+        base_gripper_planner linear_planner gmm_planner gaussian_mixture_model
         ${LIBGP_LIBRARIES} ${catkin_LIBRARIES}
         )
 
