Update dependencies, small stuff

--- a/src/control/mobile_manipulation/dependencies.ini
+++ b/src/control/mobile_manipulation/dependencies.ini
@@ -7,12 +7,21 @@ python=torch==1.7.1
        pyyaml
        matplotlib
        empy
+       setuptools_rust
        pyparsing
        pillow==7.2.0
-       seaborn
        scipy
        stable-baselines3>=0.10.0
        roslibpy
        rospkg
+       catkin_pkg
+       catkin_tools
        gym>=0.18.0
        cloudpickle==1.5.0
+       defusedxml
+       netifaces
+linux=ros-melodic-ros-base
+      ros-melodic-pybind11-catkin
+      ros-melodic-moveit
+      ros-melodic-pr2-simulator
+      ros-melodic-moveit-pr2
