--- a/src/control/mobile_manipulation/dependencies.ini
+++ b/src/control/mobile_manipulation/dependencies.ini
@@ -20,6 +20,8 @@ python=torch==1.7.1
        cloudpickle==1.5.0
        defusedxml
        netifaces
+       rosinstall
+       rosdep
 linux=ros-melodic-ros-base
       ros-melodic-pybind11-catkin
       ros-melodic-moveit
