ros setup script for unittests

--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -52,4 +52,5 @@ jobs:
         make install_compilation_dependencies
         make install_runtime_dependencies
         pip install -r tests/sources/requirements.txt
+        source tests/sources/tools/control/mobile_manipulation/run_ros.sh
         python -m unittest discover -s tests/sources
