--- a/projects/c_api/Makefile
+++ b/projects/c_api/Makefile
@@ -1,3 +1,19 @@
+#
+# Copyright 2020-2021 OpenDR project
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+
 CPP = g++
 CC = gcc
 AR = ar
@@ -19,8 +35,8 @@ all: install_dependencies download libopendr demos runtests
 
 libopendr:
 	$(MKDIR_P) $(BUILD_DIR)
-	$(CPP) $(CFLAGS) -c  src/opendr_utils.cpp -o $(BUILD_DIR)/opendr_utils.o $(INC)
-	$(CPP) $(CFLAGS) -c  src/face_recognition.cpp -o $(BUILD_DIR)/opendr_face_recognition.o $(INC)
+	$(CPP) $(CFLAGS) -c  src/opendr_utils.cpp -o $(BUILD_DIR)/opendr_utils.o $(INC) $(OPENDR_INC)
+	$(CPP) $(CFLAGS) -c  src/face_recognition.cpp -o $(BUILD_DIR)/opendr_face_recognition.o $(INC) $(OPENDR_INC)
 	$(MKDIR_P) $(LIB_DIR)
 	$(AR) crf lib/libopendr.a $(BUILD_DIR)/opendr_utils.o $(BUILD_DIR)/opendr_face_recognition.o
 
