RetinaFace tests/Makefile modifications

--- a/src/opendr/perception/object_detection_2d/retinaface/Makefile
+++ b/src/opendr/perception/object_detection_2d/retinaface/Makefile
@@ -34,6 +34,7 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
+# TODO: move this to opendr Makefile
 all:
 	cd algorithm/cython/; python setup.py build_ext --inplace; rm -rf build; cd ../../
 clean:
