--- a/src/opendr/perception/object_detection_2d/centernet/dependencies.ini
+++ b/src/opendr/perception/object_detection_2d/centernet/dependencies.ini
@@ -3,5 +3,5 @@
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format
 python=mxnet==1.8.0
        gluoncv==0.10.0
-       tqdm>=0.47.0
-       numpy>=1.18.1
+       tqdm==4.54.0
+       pycocotools==2.0.2
