--- a/src/opendr/perception/object_detection_2d/retinaface/dependencies.ini
+++ b/src/opendr/perception/object_detection_2d/retinaface/dependencies.ini
@@ -2,6 +2,4 @@
 # 'python' key expects a value using the Python requirements file format
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format
 python=mxnet==1.8.0
-       gluoncv==0.10.0
-       tqdm>=4.47.0
-       numpy>=1.18.1
+       tqdm==4.54.0
