--- a/src/opendr/perception/object_detection_2d/dependencies.ini
+++ b/src/opendr/perception/object_detection_2d/dependencies.ini
@@ -1,7 +1,8 @@
 [runtime]
 # 'python' key expects a value using the Python requirements file format
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format
-python=mxnet-cu102==1.7.0
+python=mxnet-cu102==1.8.0
+       mxnet==1.8.0
        gluoncv==0.10.0
        tqdm==4.54.0
        pycocotools==2.0.2
