--- a/projects/opendr_ws/src/perception/CMakeLists.txt
+++ b/projects/opendr_ws/src/perception/CMakeLists.txt
@@ -28,5 +28,6 @@ include_directories(
 
 catkin_install_python(PROGRAMS
    scripts/pose_estimation.py
+   scripts/detr.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
