add ROS_DISTRO variable, move ros packages into install_mobile_manipulation.sh

--- a/src/opendr/control/mobile_manipulation/dependencies.ini
+++ b/src/opendr/control/mobile_manipulation/dependencies.ini
@@ -22,9 +22,5 @@ python=torch==1.7.1
        netifaces
        rosinstall
        rosdep
-linux=ros-melodic-ros-base
-      ros-melodic-pybind11-catkin
-      ros-melodic-moveit
-      ros-melodic-pr2-simulator
-      ros-melodic-moveit-pr2
+linux=libeigen3-dev
       
