Execute mobile rl Makefile from main Makefile

--- a/src/opendr/control/mobile_manipulation/Makefile
+++ b/src/opendr/control/mobile_manipulation/Makefile
@@ -24,7 +24,7 @@ install_runtime_dependencies:
 	@+echo "#"; echo "# * Install Runtime Dependencies *"; echo "#"
 
 install_compilation_dependencies:
-	@+echo "#"; echo "# * Install Compilation Dependencies *"; echo "#"
+	@+echo "#"; echo "# * Install Compilation Dependencies for Mobile Manipulation *"; echo "#"
 	@./install_mobile_manipulation.sh
 
 help:
