Use pip -r to install python dependencies (#112)
* Use pip to show and resolve conflicts in dependencies

* Introduce python compilation dependencies

* Replace PIL with pillow dependency

* Update dependencies

* Update dependencies

* Disable object_tracking_2d tests

* Add python-dependencies key

* Add wheel package to global dependencies

Co-authored-by: Stefania Pedrazzi <stefaniapedrazzi@users.noreply.github.com>

--- a/dependencies/dependencies.ini
+++ b/dependencies/dependencies.ini
@@ -1,6 +1,5 @@
 [runtime]
-# 'python' key expects a value in the Python requirements file format
-#  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format 
-python=numpy==1.17.5
-       cython
-
+# 'python' and 'python-dependencies' keys expects a value in the Python requirements file format
+#  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format
+python=torch==1.7.1
+       wheel
