--- a/src/opendr/perception/object_tracking_2d/fair_mot/dependencies.ini
+++ b/src/opendr/perception/object_tracking_2d/fair_mot/dependencies.ini
@@ -1,8 +1,8 @@
 [runtime]
-# 'python' key expects a value using the Python requirements file format
-#  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format 
-python=torch==1.7.1
-       torchvision==0.8.2
+# 'python' and 'python-dependencies' keys expect a value in the Python requirements file format
+#  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format
+python-dependencies=torch==1.7.1
+python=torchvision==0.8.2
        tensorboardX==2.0
        opencv-python==4.5.1.48
        matplotlib==2.2.2
