--- a/src/opendr/perception/pose_estimation/dependencies.ini
+++ b/src/opendr/perception/pose_estimation/dependencies.ini
@@ -1,6 +1,7 @@
 [runtime]
-# 'python' key expects a value using the Python requirements file format
+# 'python' and 'python-dependencies' keys expect a value in the Python requirements file format
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format 
+python-dependencies=cython
 python=torch==1.7.1
        torchvision==0.8.2
        tensorboardX==2.0
