Dynamic lib and makefile fixes

--- a/projects/c_api/Makefile
+++ b/projects/c_api/Makefile
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-
+SHELL := /bin/bash
 CPP = g++
 CC = gcc
 AR = ar
@@ -25,7 +25,7 @@ BUILD_DIR = build
 DATA_DIR = data
 LIB_DIR = lib
 
-CFLAGS  = -g
+CFLAGS  = -fPIC
 INC = -I/usr/local/include/onnxruntime/core/session/ `pkg-config --cflags opencv4`
 LD =  -L/usr/lib/ -L/usr/local/lib/ -lstdc++ -lm -lonnxruntime `pkg-config --libs opencv4` -lboost_filesystem
 OPENDR_INC = -I./include
@@ -33,32 +33,47 @@ OPENDR_LD = -L./lib -lopendr
 
 all: install_dependencies download libopendr demos runtests
 
-libopendr:
+libopendr: lib/libopendr.so
+
+lib/libopendr.so:
 	@+echo "Building C API..."
 	@+$(MKDIR_P) $(BUILD_DIR)
-	$(CPP) $(CFLAGS) -c  src/opendr_utils.cpp -o $(BUILD_DIR)/opendr_utils.o $(INC) $(OPENDR_INC)
-	$(CPP) $(CFLAGS) -c  src/face_recognition.cpp -o $(BUILD_DIR)/opendr_face_recognition.o $(INC) $(OPENDR_INC)
+	$(CPP) $(CFLAGS) -c src/opendr_utils.cpp -o $(BUILD_DIR)/opendr_utils.o $(INC) $(OPENDR_INC)
+	$(CPP) $(CFLAGS) -c src/face_recognition.cpp -o $(BUILD_DIR)/opendr_face_recognition.o $(INC) $(OPENDR_INC)
 	@$(MKDIR_P) $(LIB_DIR)
-	$(AR) crf lib/libopendr.a $(BUILD_DIR)/opendr_utils.o $(BUILD_DIR)/opendr_face_recognition.o
+	$(CPP) $(CFLAGS)  -o lib/libopendr.so $(BUILD_DIR)/opendr_utils.o $(BUILD_DIR)/opendr_face_recognition.o $(LD)  --shared
 
-demos:
-	@+echo "Building C API demos..."
+demos: $(BUILD_DIR)/face_recognition_demo
+
+$(BUILD_DIR)/face_recognition_demo:
+	@+echo "Building face recognition demo..."
 	$(CC)  $(CFLAGS) -o $(BUILD_DIR)/face_recognition_demo samples/face_recognition/face_recognition_demo.c $(INC) $(OPENDR_INC) $(OPENDR_LD) $(LD)
 
 download:
-	@+echo "Downloading resources for C API..."
-	@+$(MKDIR_P) $(DATA_DIR)
-	@+$(WGET) ftp://opendrdata.csd.auth.gr/perception/face_recognition/test_data/*
-	@+$(MV) opendrdata.csd.auth.gr/perception/face_recognition/test_data/images  $(DATA_DIR)/database
-	@+$(WGET) ftp://opendrdata.csd.auth.gr/perception/face_recognition/optimized_model/*
-	@+$(MV) opendrdata.csd.auth.gr/perception/face_recognition/optimized_model  $(DATA_DIR)/optimized_model
-	@+$(RM) -r opendrdata.csd.auth.gr
+	@+if [ -a $(DATA_DIR) ] ; \
+	then \
+		echo Resources already downloaded. Run rm -rf $(DATA_DIR) to remove existing resources.; \
+	else \
+		echo Downloading resources for C API...; \
+		$(RM) -r opendrdata.csd.auth.gr; \
+		$(MKDIR_P) $(DATA_DIR); \
+		$(WGET) ftp://opendrdata.csd.auth.gr/perception/face_recognition/test_data/*; \
+		$(MV) opendrdata.csd.auth.gr/perception/face_recognition/test_data/images  $(DATA_DIR)/database; \
+		$(WGET) ftp://opendrdata.csd.auth.gr/perception/face_recognition/optimized_model/*; \
+		$(MV) opendrdata.csd.auth.gr/perception/face_recognition/optimized_model  $(DATA_DIR)/optimized_model; \
+		$(RM) -r opendrdata.csd.auth.gr; \
+	fi;
 
-runtests:
-	@+echo "Building and running C API tests..."
+$(BUILD_DIR)/test_opendr_utils:
+	@+echo "Building C API test..."
 	$(CC)  $(CFLAGS) -o $(BUILD_DIR)/test_opendr_utils tests/test_opendr_utils.c $(INC) $(OPENDR_INC) $(OPENDR_LD) $(LD)
+
+$(BUILD_DIR)/test_face_recognition:
+	@+echo "Building face recognition test..."
 	$(CC)  $(CFLAGS) -o $(BUILD_DIR)/test_face_recognition tests/test_face_recognition.c $(INC) $(OPENDR_INC) $(OPENDR_LD) $(LD)
 
+runtests: download libopendr $(BUILD_DIR)/test_opendr_utils $(BUILD_DIR)/test_face_recognition
+	@+export LD_LIBRARY_PATH=./lib
 	@+echo "Running test_opendr_utils..."
 	@+$(BUILD_DIR)/test_opendr_utils 2>/dev/null
 
@@ -71,7 +86,7 @@ clean:
 	@+echo "Cleaning C API binaries and temporary files..."
 	@+$(RM) $(BUILD_DIR)/*
 	@+$(RM) $(LIB_DIR)/*
-	@+$(RM) -r $(DATA_DIR)/*
+	@+$(RM) -rf $(DATA_DIR)
 	@+echo "Done!"
 
 install_dependencies:
