--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -54,10 +54,8 @@ jobs:
         export PYTHONPATH=$OPENDR_HOME/src:$PYTHONPATH
         export DISABLE_BCOLZ_AVX2=true
         make install_compilation_dependencies
-        pkg-config --cflags opencv4
-        exit 1
-        make install_runtime_dependencies
+        # make install_runtime_dependencies
         make libopendr
         pip install -r tests/sources/requirements.txt
-        python -m unittest discover -s tests/sources
+        # python -m unittest discover -s tests/sources
         make ctests
