--- a/src/opendr/perception/semantic_segmentation/dependencies.ini
+++ b/src/opendr/perception/semantic_segmentation/dependencies.ini
@@ -5,5 +5,5 @@ python=torch==1.7.1
        torchvision==0.8.2
        tqdm==4.54.0
        imgaug==0.4.0
-       PIL==7.0.0
+       pillow==7.0.0
        
