--- a/src/opendr/simulation/human_model_generation/dependencies.ini
+++ b/src/opendr/simulation/human_model_generation/dependencies.ini
@@ -8,5 +8,5 @@ python=torch==1.7.1
        # Pillow==8.1.1
        trimesh==3.5.23
        scikit-image==0.16.2
-       matplotlib==3.1.3
+       #matplotlib==3.1.3
        wget==3.2
