Add C/C++ test using cppcheck (#113)
* Update workflow dependencies

* Add cppcheck test

* Try to disable object_tracking_2d tests

* Remove useless instruction

* Remove not working change

* Remove unrelated skipped directories

--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -24,9 +24,9 @@ jobs:
         os: [ubuntu-18.04, ubuntu-20.04, macos-10.15]
         include:
           - os: ubuntu-18.04
-            DEPENDENCIES_INSTALLATION: "sudo apt -y install clang-format-9"
+            DEPENDENCIES_INSTALLATION: "sudo apt -y install clang-format-10 cppcheck"
           - os: ubuntu-20.04
-            DEPENDENCIES_INSTALLATION: "sudo apt -y install clang-format-9"
+            DEPENDENCIES_INSTALLATION: "sudo apt -y install clang-format-10 cppcheck"
           - os: macos-10.15
             DEPENDENCIES_INSTALLATION: "brew install clang-format cppcheck"
     runs-on: ${{ matrix.os }}
