libeigen3 into compilation dependencies

--- a/src/opendr/control/mobile_manipulation/dependencies.ini
+++ b/src/opendr/control/mobile_manipulation/dependencies.ini
@@ -1,3 +1,5 @@
+[compilation]
+linux=libeigen3-dev
 [runtime]
 # 'python' key expects a value using the Python requirements file format
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format
@@ -22,5 +24,4 @@ python=torch==1.7.1
        netifaces
        rosinstall
        rosdep
-linux=libeigen3-dev
       
