--- a/src/opendr/control/mobile_manipulation/dependencies.ini
+++ b/src/opendr/control/mobile_manipulation/dependencies.ini
@@ -1,5 +1,11 @@
 [compilation]
 linux=libeigen3-dev
+python=rosinstall
+       rosdep
+       rospkg
+       catkin_pkg
+       catkin_tools
+       roslibpy
 [runtime]
 # 'python' key expects a value using the Python requirements file format
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format
@@ -14,14 +20,8 @@ python=torch==1.7.1
        pillow==7.0.0
        scipy
        stable-baselines3>=0.10.0
-       roslibpy
-       rospkg
-       catkin_pkg
-       catkin_tools
        gym>=0.18.0
        cloudpickle==1.5.0
        defusedxml
        netifaces
-       rosinstall
-       rosdep
-      
+
