Add 2d tracking disk-based demo

--- a/src/opendr/perception/face_recognition/dependencies.ini
+++ b/src/opendr/perception/face_recognition/dependencies.ini
@@ -3,7 +3,7 @@
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format 
 python=torch==1.7.1
        torchvision==0.8.2
-       tensorboard>=2.3.0
+       tensorboard==2.4.1
        pillow==7.0.0
        opencv-python==4.5.1.48
        matplotlib==2.2.2
