--- a/.github/workflows/test_tools.yml
+++ b/.github/workflows/test_tools.yml
@@ -53,4 +53,4 @@ jobs:
         make install_compilation_dependencies
         make install_runtime_dependencies
         pip install -r tests/sources/requirements.txt
-        python -m unittest discover -s tests/sources/${{ matrix.package }}
+        python -m unittest discover -s tests/sources/tools/${{ matrix.package }}
