--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -58,11 +58,11 @@ jobs:
           - perception/face_recognition
           - perception/heart_anomaly_detection
           - perception/multimodal_human_centric
-          - perception/object_detection_3d
           - perception/object_tracking_2d
           - perception/object_tracking_3d
           - perception/pose_estimation
           - perception/speech_recognition
+          # - perception/object_detection_3d
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
