tests related changes

--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -63,6 +63,7 @@ jobs:
           - perception/object_detection_3d
           - perception/pose_estimation
           - perception/speech_recognition
+          - perception/object_detection_2d
           # - perception/object_tracking_3d
     runs-on: ${{ matrix.os }}
     steps:
