--- a/src/opendr/perception/object_detection_2d/dependencies.ini
+++ b/src/opendr/perception/object_detection_2d/dependencies.ini
@@ -5,6 +5,6 @@ python=mxnet-cu102==1.8.0
        mxnet==1.8.0
        gluoncv==0.10.0
        tqdm==4.54.0
-       pycocotools==2.0.2
+       git+https://github.com/cidl-auth/cocoapi#subdirectory=PythonAPI
 
 linux=libopenblas-dev
