--- a/src/opendr/perception/object_detection_2d/dependencies.ini
+++ b/src/opendr/perception/object_detection_2d/dependencies.ini
@@ -3,7 +3,7 @@
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format
 python=mxnet-cu102==1.8.0
        mxnet==1.8.0
-       gluoncv==0.10.0
+       gluoncv==0.11.0b20210908
        tqdm==4.54.0
        git+https://github.com/cidl-auth/cocoapi#subdirectory=PythonAPI
 
