--- a/src/opendr/perception/object_detection_2d/detr/dependencies.ini
+++ b/src/opendr/perception/object_detection_2d/detr/dependencies.ini
@@ -8,7 +8,7 @@ python=torch>=1.5.0
        scipy
        onnx
        onnxruntime
-       PIL
+       pillow==7.0.0
        imantics
        tensorboard
        opencv
