--- a/src/opendr/perception/object_detection_2d/detr/dependencies.ini
+++ b/src/opendr/perception/object_detection_2d/detr/dependencies.ini
@@ -3,7 +3,7 @@
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format 
 python=torch>=1.5.0
        torchvision>=0.6.0
-       git+https://github.com/cocodataset/cocoapi.git#subdirectory=PythonAPI&egg=pycocotools
+       git+https://github.com/cidl-auth/cocoapi#subdirectory=PythonAPI
        git+https://github.com/cocodataset/panopticapi.git#egg=panopticapi
        scipy
        onnx
