Add DEPENDENCIES_INSTALLATION to test-tools

--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -77,6 +77,7 @@ jobs:
     - name: Test Tools
       if: ${{ contains(github.event.pull_request.labels.*.name, 'test tools') }}
       run: |
+        ${{ matrix.DEPENDENCIES_INSTALLATION }}
         export OPENDR_HOME=$PWD
         export PYTHONPATH=$OPENDR_HOME/src:$PYTHONPATH
         export DISABLE_BCOLZ_AVX2=true
