--- a/src/opendr/perception/object_detection_2d/gem/dependencies.ini
+++ b/src/opendr/perception/object_detection_2d/gem/dependencies.ini
@@ -3,11 +3,12 @@
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format 
 python=torch>=1.5.0
        torchvision>=0.6.0
-       git+https://github.com/cocodataset/cocoapi.git#subdirectory=PythonAPI&egg=pycocotools
+       pillow==7.0.0
+       opencv-python==4.5.1.48
+       git+https://github.com/cidl-auth/cocoapi#subdirectory=PythonAPI
        git+https://github.com/cocodataset/panopticapi.git#egg=panopticapi
        scipy
        onnx
        onnxruntime
-       PIL
        imantics
        tensorboard
