Device-based installation (#122)
* Use make command for tests in workflow file

* Add OPENDR_DEVICE enviroment variable to skip installation of CPU-only tools

* Skip tests on unsupported devices

* Remove skipping tests as this was handled by PR 125 for CI

--- a/dependencies/dependencies.ini
+++ b/dependencies/dependencies.ini
@@ -1,5 +1,9 @@
 [runtime]
-# 'python' and 'python-dependencies' keys expects a value in the Python requirements file format
+# 'python' and 'python-dependencies' keys expect a value in the Python requirements file format
 #  https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format
 python=torch==1.7.1
        wheel
+
+[device]
+# These dependencies require a CPU. If no CPU is available, the package will not be installed.
+opendr_device=cpu
