--- a/src/opendr/simulation/human_model_generation/dependencies.ini
+++ b/src/opendr/simulation/human_model_generation/dependencies.ini
@@ -4,9 +4,8 @@
 python=torch==1.7.1
        torchvision==0.8.2
        pyglet==1.5.16
-       # opencv-python==4.5.1.48
-       # Pillow==8.1.1
+       opencv-python==4.5.1.48
+       Pillow==7.0.0
        trimesh==3.5.23
        scikit-image==0.16.2
-       #matplotlib==3.1.3
-       wget==3.2
+       matplotlib==2.2.2
