--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,4 +2,4 @@
 # the repo. Unless a later match takes precedence,
 # @global-owner1 and @global-owner2 will be requested for
 # review when someone opens a pull request.
-*       @passalis @stefaniapedrazzi @omichel @lukicdarkoo @ad-daniel
+*       @passalis @omichel @ad-daniel
