--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -68,6 +68,7 @@ jobs:
           - perception/semantic_segmentation
           - control/mobile_manipulation
           - perception/object_detection_2d
+          - perception/landmark-based-facial-expression-recognition
           # - perception/object_tracking_3d
         include:
           - os: ubuntu-20.04
