--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -68,6 +68,7 @@ jobs:
           - perception/semantic_segmentation
           - control/mobile_manipulation
           - perception/object_detection_2d
+          - simulation/human_model_generation
           # - perception/object_tracking_3d
         include:
           - os: ubuntu-20.04
