--- a/projects/opendr_ws/src/simulation/CMakeLists.txt
+++ b/projects/opendr_ws/src/simulation/CMakeLists.txt
@@ -44,5 +44,6 @@ include_directories(
 
 catkin_install_python(PROGRAMS
    scripts/human_model_generation_service.py
+   scripts/human_model_generation_client.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
