Add EfficientPS for panoptic segmentation (#96)
* Initial commit efficientPS

* Add efficientNet

* Add mmdetection

* Add heatmap to OpenDR engine

* Format efficientNet with yapf

* Format mmdetection with yapf

* Fix flake8 issues in mmdetection

* Fix flake8 issues in efficientNet

* Update readme

* Add link to arxiv paper

* Undo fixing F401 and F403

* Add evaluation for Cityscapes

* Remove need to store json files

* Add training code [WIP]

* Sample usage for training, evaluation, and inference

* Adapt interfaces and add in-line documentation

* Convert raw Cityscapes dataset

* Add readme for datasets

* Add placeholder for downloading trained model weights

* Add KITTI dataset

* Format with yapf

* Fix pre-checks in KITTI dataset

* Add license files of original repos

* Move files

* Modify paths in example usage

* Add documentation for heatmap class

* Add documentation for EfficientPsLearner class

* Add unit tests

* Point download URLs to OpenDR server

* Change image readers from mmcv to cv2 in example usage and test

* Update dependencies

* Fix PEP8 errors and warnings

* Format with clang

* Do not run tests on 3rd part code: fixed everthing except license and PEP8 F401, F403

* Squashed commit of the following:

commit 1930c741d578d5f37f94e00020167124f9d711d1
Merge: dc37a2de5 b5b846529
Author: jovaroo <joonas.roos@tuni.fi>
Date:   Tue Jul 13 19:42:35 2021 +0300

    Merge pull request #88 from tasostefas/fix-edgespeechnets-tests

    Fix EdgeSpeechNets target class and test

commit b5b8465293ba8ee91941e4c2f3512589a47449d5
Merge: 9c98e5271 dc37a2de5
Author: jovaroo <joonas.roos@tuni.fi>
Date:   Tue Jul 13 18:21:43 2021 +0300

    Merge branch 'master' into fix-edgespeechnets-tests

commit dc37a2de59b0d9b8c7fa46019e645f485267fec2
Merge: 24bc9c85c bb59879ec
Author: Nikolaos Passalis <passalis@users.noreply.github.com>
Date:   Tue Jul 13 18:15:20 2021 +0300

--- a/.github/workflows/tests_sources.yml
+++ b/.github/workflows/tests_sources.yml
@@ -33,6 +33,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       if: matrix.os == 'ubuntu-20.04' || github.event.pull_request.draft == false
+      with:
+         submodules: true
     - name: Set up Python 3.8
       if: matrix.os == 'ubuntu-20.04' || github.event.pull_request.draft == false
       uses: actions/setup-python@v2
