--- a/src/opendr/control/mobile_manipulation/dependencies.ini
+++ b/src/opendr/control/mobile_manipulation/dependencies.ini
@@ -13,7 +13,7 @@ python=vcstool
 python=torch==1.7.1
        tensorboard
        numpy
-       pyyaml==5.3
+       pyyaml
        matplotlib
        pyparsing
        pillow==7.0.0
