--- a/projects/simulation/SMPL+D_body_models/webots/smpl_webots/controllers/smpl_animation/Makefile
+++ b/projects/simulation/SMPL+D_body_models/webots/smpl_webots/controllers/smpl_animation/Makefile
@@ -26,5 +26,4 @@ endif
 INCLUDE = -I"$(WEBOTS_SKIN_ANIMATION_PATH)/smpl_util/include"
 LIBRARIES = -L"$(WEBOTS_SKIN_ANIMATION_PATH)/smpl_util" -lsmpl_util 
 # Do not modify the following: this includes Webots global Makefile.include
-include /media/charsyme/HDD_drive/Linux/webots_development/webots/resources/Makefile.include
-
+include $(WEBOTS_HOME_PATH)/resources/Makefile.include
