Add EAGERx docs, update dependencies, specify submodule branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,5 @@
 [submodule "src/opendr/utils/eagerx/eagerx"]
 	path = projects/control/eagerx/eagerx
 	url = https://github.com/eager-dev/eagerx.git
+	branch = opendr_v1.0
+	
